hphp/hack/test/typecheck/as_expression/xhp.php.exp
File "xhp.php", line 6, characters 20-26:
Invalid "as" expression hint (Typing[4195])
  File "xhp.php", line 6, characters 20-26:
  The "as" operator cannot be used with an XHP class (temporarily)
