hphp/hack/test/typecheck/as_expression/xhp.php
<?hh // strict

final class :my-xhp {}

function f(mixed $x): void {
  expect_xhp($x as :my-xhp);
}

function expect_xhp(:my-xhp $x): void {}
